Add auth, sessions, memory, and UI updates

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,4 +2,6 @@ fastapi
 uvicorn[standard]
 pydantic
 python-dotenv
+python-jose[cryptography]
+bcrypt
 # Install Microsoft Agent Framework separately (see README)
